PandoraFMS/pandorafms_community_v1/manifiestos/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/pandorafmscommunitypruebas-pandora: "true"
        io.kompose.service: db
    spec:
      containers:
        - args:
            - mysqld
            - --innodb-buffer-pool-size=300M
          image: rameijeiras/pandorafms-percona-base
          name: db
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
