PandoraFMS/pandorafms_community_v1/manifiestos/pandora-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: pandora
  name: pandora
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pandora
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/pandorafmscommunitypruebas-pandora: "true"
        io.kompose.service: pandora
    spec:
      containers:
        - env:
            - name: DBHOST
              value: db
            - name: DBNAME
              value: pandora
            - name: DBPASS
              value: pandora
            - name: DBPORT
              value: "3306"
            - name: DBUSER
              value: pandora
            - name: INSTANCE_NAME
              value: pandora01
            - name: MYSQL_ROOT_PASSWORD
              value: pandora
            - name: RETRIES
              value: "5"
            - name: SLEEP
              value: "10"
          image: rameijeiras/pandorafms-community
          name: pandora
          ports:
            - containerPort: 80
            - containerPort: 41121
            - containerPort: 162
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql
      restartPolicy: Always
      volumes:
        - name: mysql
          persistentVolumeClaim:
            claimName: mysql
status: {}
