PandoraFMS/pandorafms_community_v1/manifiestos/pandorafmscommunitypruebas-pandora-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pandorafmscommunitypruebas-pandora
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/pandorafmscommunitypruebas-pandora: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pandorafmscommunitypruebas-pandora: "true"
